tests/core/snapshots/test-params-as-body.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "id": 1,
        "name": "foo"
      }
    }
  }
}
