tests/core/snapshots/test-params-as-body.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  firstUser(id: Int, name: String): User
    @http(url: "http://jsonplaceholder.typicode.com/users", body: "{{.args}}", method: "POST")
}

type User {
  id: Int
  name: String
}
