tests/core/snapshots/test-query-complexity.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Build error: Validation Error\n• Query is too complex.\n"
      }
    ]
  }
}
