tests/core/snapshots/test-query-complexity.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": "foo",
        "username": "foo"
      }
    }
  }
}
