tests/core/snapshots/test-query-complexity.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(queryComplexity: 3) @upstream {
  query: Query
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}
