tests/core/snapshots/test-query-depth.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post": {
        "title": "foo title",
        "id": 1,
        "user": {
          "name": "foo",
          "username": "foo"
        }
      }
    }
  }
}
