tests/core/snapshots/test-query-depth.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(queryDepth: 3) @upstream {
  query: Query
}

type Blog {
  id: Int!
  name: String!
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User @call(steps: [{query: "user", args: {id: "{{.value.userId}}"}}])
  userId: Int!
}

type Query {
  blog(id: Int!): Blog @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/blogs/{{.args.id}}")
  post: Post @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts/1")
  user(id: Int!): User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/{{.args.id}}")
}

type User {
  blog: Blog @call(steps: [{query: "blog", args: {id: "{{.value.id}}"}}])
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}
